# New_Builders_Stream

./: .env.example  .gitignore  Builders Stream.docx  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  openapi.json  pyproject.toml  pytest.ini
backend/app/: config.py  db.py  main.py  scheduler.py
backend/app/core/: context.py  deps.py  event_handlers.py  events.py  logging.py  middleware.py  money.py  pagination.py  readiness.py  security.py  tier_gating.py  uploads.py
backend/app/models/: __init__.py  audit.py  base.py  bill.py  bill_payment.py  bom_line.py  bom_line_receipt.py  change_order.py  communication_log.py  company.py  company_branding.py  compliance_document.py  compliance_notification.py  cost_catalog_item.py  daily_log.py  document.py  esignature.py  estimate.py  estimate_line_item.py  expense.py  integration_connection.py  integration_sync_record.py  invoice.py  invoice_payment.py  lead.py  markup_profile.py  phase.py  project.py  refresh_token.py  subcontractor.py  subcontractor_assignment.py  subscription.py  task.py  user.py  vendor.py
backend/app/routers/: auth.py  bills.py  bom_lines.py  branding.py  catalogs.py  change_orders.py  companies.py  compliance.py  dashboard.py  esignatures.py  estimates.py  expenses.py  integrations.py  invitations.py  invoices.py  leads.py  projects.py  reports.py  subcontractor_assignments.py  subcontractors.py  subscriptions.py  tasks.py  vendors.py  webhooks.py
backend/app/schemas/: auth.py  bill.py  bom_line.py  change_order.py  communication_log.py  company.py  company_branding.py  compliance.py  compliance_document.py  cost_catalog_item.py  daily_log.py  dashboard.py  document.py  esignature.py  estimate.py  estimate_line_item.py  expense.py  integration.py  invitation.py  invoice.py  lead.py  markup_profile.py  phase.py  profitability.py  project.py  subcontractor.py  subcontractor_assignment.py  subscription.py  task.py  vendor.py
backend/migrations/: env.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_accounting_client.py  test_accounting_sync.py  test_audit_log.py  test_auth.py  test_auth_token_lifecycle.py  test_billing_service.py  test_billing_tenant_isolation.py  test_bills.py  test_bom_generation_handler.py  test_bom_lines.py  test_bom_tenant_isolation.py  test_change_orders.py  test_communication_logs.py  test_company_id_index_coverage.py  test_company_members.py  test_compliance_dashboard.py  test_compliance_expiry_task.py  test_compliance_notifications.py  test_config_validation.py  test_cost_catalog.py  test_cost_catalog_inheritance.py  test_daily_logs.py  test_dashboard_summary.py  test_deps.py  test_document_download.py  test_documents.py  test_esignatures.py  test_estimate_approved_handler.py  test_estimate_calculation.py  test_estimate_pdf_export.py  test_estimate_snapshotting.py  test_estimates.py  test_estimation_gaps.py  test_events.py  test_expenses.py  test_financial_record_sync_handler.py  test_flag_overdue_financial_records.py  test_health.py  test_integration_oauth_state.py  (+40 more)
(+294 files in other folders)
