[project]
name = "builders-stream-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "pyjwt>=2.9,<3.0",
    "argon2-cffi>=23.1,<24.0",
    "email-validator>=2.2,<3.0",
    # Required by FastAPI's Form()/File() (Task 1.15's multipart/form-data
    # document upload) — FastAPI doesn't vendor multipart parsing itself.
    "python-multipart>=0.0.12,<0.1",
    "jinja2>=3.1,<4.0",
    # Task 2.13 (PDF export): the plan document names WeasyPrint, but
    # WeasyPrint requires the GTK3/Pango/Cairo native runtime, which has no
    # simple pip-installable path on Windows as of WeasyPrint 69 (the
    # current official docs require a full MSYS2 toolchain install, not
    # just a small runtime installer) — a genuine local-dev-environment
    # blocker for this project's Windows-based development/test loop, not
    # a coding concern. xhtml2pdf is a deliberate substitution, made with
    # the user's explicit approval: pure Python (built on reportlab/pypdf,
    # zero native dependencies), same "render HTML via Jinja2, convert HTML
    # to PDF" architecture the task spec calls for, same `%PDF-` magic-byte
    # output contract every test in this task checks against. CSS support
    # is a real, accepted tradeoff versus WeasyPrint (less complete —
    # xhtml2pdf supports a practical CSS 2.1-ish subset, not full modern
    # CSS), acceptable for this task's explicitly simple, no-logo,
    # no-custom-styling layout requirement.
    "xhtml2pdf>=0.2.17,<0.3",
    # Task 2.14: the first real async task queue in this codebase (Phase 1's
    # design decision #2 deliberately deferred this — LEAD_WON's
    # single in-process, same-transaction consumer didn't need one). Pure
    # Python, no native dependencies (confirmed by installing it).
    "dramatiq[redis]>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
